metadata/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: k8s-min-service
    namespace: otus
spec:
    selector:
        app: min-k8s-app
    ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
