metadata/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: min-k8s-app-ingress
  namespace: otus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$3
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp(/|$)(.*/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: k8s-min-service
            port:
              number: 8000
